--- a/app/assets/stylesheets/_navbar.scss
+++ b/app/assets/stylesheets/_navbar.scss
@@ -39,6 +39,13 @@
 .navbar-toggler {
   border: none;
   padding: 0;
+  background-color: transparent;
+  svg{
+    fill: #fff;
+  }
+  &:hover,&:active,&:focus{
+    background-color: transparent;
+  }
 }
 .search-toggler {
   padding: 6px 10px 7px;
